fixed pants portion.

--- a/MyBusiness/MyBusiness/Views/Pants/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Pants/Index.cshtml
@@ -111,8 +111,8 @@
            <td>
    <div class="imageItem">
    <span class="image">
-        <a href="PantImages/@image.Path" target="_blank">
-        <img class="imgSingle" src="PantImages/@image.Path" height="100" width="100" /></a>
+        <a href="PantsImages/@image.Path" target="_blank">
+        <img class="imgSingle" src="PantsImages/@image.Path" height="100" width="100" /></a>
         <br />
         <span class="description">@image.Description</span>
    </span>
@@ -137,8 +137,8 @@
            <td>
               <div class="imageItem">
    <span class="image">
-        <a href="PantImages/@image.Path" target="_blank">
-        <img class="imgSingle" src="PantImages/@image.Path" height="100" width="100" /></a>
+        <a href="PantsImages/@image.Path" target="_blank">
+        <img class="imgSingle" src="PantsImages/@image.Path" height="100" width="100" /></a>
         <br />
         <span class="description">@image.Description</span>
    </span>
