--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -100,10 +100,11 @@
                         <span class="CompanyName">Donna's Fashion</span>
                             <li class="@Html.ActivePage("About", "Index")">@Html.ActionLink("About Us", "Index", "About")</li>
                             <li class="@Html.ActivePage("Map", "Index")">@Html.ActionLink("Map", "Index", "Map")</li>
-                            <li class="@Html.ActivePage("RhineStones", "Index")">@Html.ActionLink("RhineStones", "Index", "RhineStones")</li>
-                            <li class="@Html.ActivePage("Shoes", "Index")">@Html.ActionLink("Womens Shoes", "Index", "Shoes")</li>
+                            <li class="@Html.ActivePage("RhineStones", "Index")">@Html.ActionLink("Rhinestones", "Index", "RhineStones")</li>
+                            <li class="@Html.ActivePage("Shoes", "Index")">@Html.ActionLink("Shoes", "Index", "Shoes")</li>
                             <li class="@Html.ActivePage("Pants", "Index")">@Html.ActionLink("Pants", "Index", "Pants")</li>
                             <li class="@Html.ActivePage("Shirts", "Index")">@Html.ActionLink("Shirts", "Index", "Shirts")</li>
+                            <li class="@Html.ActivePage("Hats", "Index")">@Html.ActionLink("Hats", "Index", "Hats")</li>
                             <li class="@Html.ActivePage("Apparel", "Index")">@Html.ActionLink("Apparel", "Index", "Apparel")</li>
                             <li class="@Html.ActivePage("NewArrivals", "Index")">@Html.ActionLink("New Arrivals!", "Index", "NewArrivals")</li>
                             <li class="@Html.ActivePage("Home", "Index")">@Html.ActionLink("Home", "Index", "Home")</li>
