Changed copy right info and title text sizes.

--- a/MyBusiness/MyBusiness/Content/Site.css
+++ b/MyBusiness/MyBusiness/Content/Site.css
@@ -87,7 +87,7 @@ h2
 {
     float: left;
     color: #FFF;
-    font-size: 1.0em;
+    font-size: 18px;
     line-height: 0px;
     padding-left: 3px;
 }
