--- a/MyBusiness/MyBusiness/Views/Shared/_FooterPartial.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_FooterPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿            <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year</p>
+                    <p>&copy;@DateTime.Now.Year Donna's Fashion</p>
                 </div>
             </div>
                 <div id="FooterImg">
