--- a/MyBusiness/MyBusiness/Content/Site.css
+++ b/MyBusiness/MyBusiness/Content/Site.css
@@ -23,12 +23,13 @@ body
 }
 
 #container {
-    max-width: 1000px;
+    width: 980px;
     height: 100%;
     overflow: hidden;
     margin-left:auto;
     margin-right:auto;
     padding: 30px 30px 0px 0px;
+    clear:both;
 }
 
 
@@ -37,7 +38,7 @@ body
     font-size:large;
     padding-left:3px;
     padding-right:3px;
-    max-width: 1360px;
+    width: 970px;
     /*background-color: #efeeef;*/
     background-color: #fff;
     clear: both;
@@ -45,9 +46,6 @@ body
     margin-left:auto;
     margin-right:auto;
     height:760px;
-    border-left: 2px solid #FFF;
-    border-right: 2px solid #FFF;
-    border-top: 2px solid #FFF;
     /*border-top-left-radius:15px;
     border-top-right-radius:15px;*/
 }
@@ -94,9 +92,11 @@ h2
 
 .CompanyName
 {
+  position:absolute;
   float:left;
   color:#FF3CB1;
   font-size:18px;
+  width:160px;
 }
 
 header,
@@ -107,6 +107,7 @@ section
     margin-top:-10px;
     display: block;
 }
+
 
 /* Styles for basic forms
 -----------------------------------------------------------*/
@@ -175,7 +176,7 @@ ul#menu {padding:0;position:relative;margin:0 0 0 15px;text-align:right;}
 /* tab background color */
 ul#menu li {display:block;list-style:none;background:#FFFF44 no-repeat 0 -150px;float:right;margin:0 2px 0 0;font-size:.8em;}
 /* tab font color */
-ul#menu li a {padding:10px 10px;font-weight:bold;text-decoration:none;color:#000;background: transparent no-repeat right -150px;display:block;}
+ul#menu li a {padding:10px 15px;font-weight:bold;text-decoration:none;color:#000;background: transparent no-repeat right -150px;display:block;}
 ul#menu li a:hover {text-decoration:none;color:#FF3CB1;}
 ul#menu li a:active {text-decoration:none;color:#009933;}
 ul#menu li.selected {background:#FF3CB1 no-repeat 0 -150px;}
@@ -184,6 +185,7 @@ ul#menu li.selected a {color:#000;}
 #FbImg
 {
     width:50px;
+    float:right;
 }
 
 #GitHubImg
@@ -196,15 +198,8 @@ ul#menu li.selected a {color:#000;}
     width:25px;
 }
 
-#FooterImg
-{
-    float:right;
-    margin-right:5px;
-}
-
 footer 
 {
-    clear: both;
     /*background-color: #e2e2e2;*/
     background-color: #000000;
     font-size: .8em;
@@ -214,12 +209,17 @@ footer
     border-bottom-right-radius:15px;*/
 }
 
+#copyright
+{
+    float:left;
+    width:150px;
+}
+
+
 .footer-text
 {
-    position:absolute;
-    margin-top: -23px;
-    margin-left: -80px;
     float:right;
+    color:#FF3CB1;
 }
 
 /* Home */
@@ -366,10 +366,11 @@ ul#menu li.selected a {color:#000;}
 
 .CompanyName
 {
+  position:absolute;  
   float:left;
   color:#FF3CB1;
   font-size:11px;
-  padding-right:10px;
+  padding-right:30px;
 }
 
 .bar
@@ -394,9 +395,9 @@ ul#menu li.selected a {color:#000;}
 
 #FbImg
 {
-    margin-top:1px;
-    width:40px;
-    margin-right:-20px;
+    width:30px;
+    margin-right: -20px;
+    float:right;
 }
 
 #GitHubImg
@@ -409,18 +410,17 @@ ul#menu li.selected a {color:#000;}
     width:40px;
 }
 
-#FooterImg
+#copyright
 {
-    float:right;
+    float:left;
+    width:150px;
 }
+
 
 .footer-text
 {
-    position:absolute;
-    margin-top: -15px;
-    margin-left: -43px;
     float:right;
-    width:100px;
+    color:#FF3CB1;
 }
 
     #bodyInner
@@ -441,7 +441,7 @@ ul#menu li.selected a {color:#000;}
   #container {
     /*width: 1060px;*/
     position: relative;
-    width: 650px;
+    width: 670px;
     height: 100%;
     overflow: hidden;
     /*background-color : green;*/
@@ -449,6 +449,7 @@ ul#menu li.selected a {color:#000;}
     margin-right:auto;
     font-size: .7em;
     padding: 30px 30px 0px 0px;
+    clear:both;
 }
 
 /* Home */
