--- a/MyBusiness/MyBusiness/Views/Shared/_FooterPartial.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_FooterPartial.cshtml
@@ -1,11 +1,7 @@
 ﻿            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy;@DateTime.Now.Year Donna's Fashion</p>
-                </div>
+                <div style="clear:both;"> </div>
+                <span class="copyright">&copy;@DateTime.Now.Year Donna's Fashion</span>
+                <span class="footer-text">6701 Harwin Dr #222 Houston, TX 77036</span>
+                <div style="clear:both;"> </div>
+                <img id="FbImg" src="/Images/Facebook.png" alt="Facebook" style="border:0" />
             </div>
-                <div id="FooterImg">
-                <div class="footer-text">Follow us at Facebook</div>
-                <!--<a href="https://github.com/eplugplay/" target="_blank"><img id="GitHubImg" style="margin-right:3px;" src="/Images/GitHubFooter.png" alt="Github" style="border:0" /></a>
-                <a href="http://www.linkedin.com/pub/steve-yi/34/972/2aa/" target="_blank"><img id="LinkedInImg" src="/Images/LinkedIn.png" alt="LinkedIn" style="border:0" /></a>-->
-                <img id="FbImg" style="margin-left:1px;" src="/Images/Facebook.png" alt="Facebook" style="border:0" />
-                </div>
