--- a/MyBusiness/MyBusiness/Content/Site.css
+++ b/MyBusiness/MyBusiness/Content/Site.css
@@ -397,7 +397,6 @@ ul#menu li.selected a {color:#000;}
 #FbImg
 {
     width:30px;
-    margin-right: -20px;
     float:right;
 }
 
@@ -440,16 +439,15 @@ ul#menu li.selected a {color:#000;}
   }
   
   #container {
-    /*width: 1060px;*/
     position: relative;
     width: 670px;
     height: 100%;
     overflow: hidden;
-    /*background-color : green;*/
     margin-left:auto;
     margin-right:auto;
     font-size: .7em;
     padding: 30px 30px 0px 0px;
+    margin-left:4%;
     clear:both;
 }
 
