--- a/MyBusiness/MyBusiness/Views/Shoes/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shoes/Index.cshtml
@@ -110,7 +110,7 @@
            <td>
    <div class="imageItem">
    <span class="image">
-        <a href="ShoesImages/@image.Path" target="_blank">
+        <a href="ShoesImages/@image.Path">
         <img class="imgSingle" src="ShoesImages/@image.Path" height="100" width="100" /></a>
         <br />
         <span class="description">@image.Description</span>
