--- a/MyBusiness/MyBusiness/Views/NewArrivals/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/NewArrivals/Index.cshtml
@@ -112,7 +112,7 @@
            <td>
    <div class="imageItem">
    <span class="image">
-        <a href="NewArrivalsImages/@image.Path" target="_blank">
+        <a href="NewArrivalsImages/@image.Path">
         <img class="imgSingle" src="NewArrivalsImages/@image.Path" height="100" width="100" /></a>
         <br />
         <span class="description">@image.Description</span>
@@ -138,7 +138,7 @@
            <td>
               <div class="imageItem">
    <span class="image">
-        <a href="NewArrivalsImages/@image.Path" target="_blank">
+        <a href="NewArrivalsImages/@image.Path">
         <img class="imgSingle" src="NewArrivalsImages/@image.Path" height="100" width="100" /></a>
         <br />
         <span class="description">@image.Description</span>
