--- a/MyBusiness/MyBusiness/Views/RhineStones/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/RhineStones/Index.cshtml
@@ -111,7 +111,7 @@
     <td>
     <div class="imageItem">
    <span class="image">
-        <a href="RhinestoneImages/@image.Path" target="_blank">
+        <a href="RhinestoneImages/@image.Path">
         <img class="imgSingle" src="RhinestoneImages/@image.Path" height="100" width="100" /></a>
         <br />
         <span class="description">@image.Description</span>
@@ -137,7 +137,7 @@
            <td>
     <div class="imageItem">
    <span class="image">
-        <a href="RhinestoneImages/@image.Path" target="_blank">
+        <a href="RhinestoneImages/@image.Path">
         <img class="imgSingle" src="RhinestoneImages/@image.Path" height="100" width="100" /></a>
         <br />
         <span class="description">@image.Description</span>
