--- a/MyBusiness/MyBusiness/Views/Shirts/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shirts/Index.cshtml
@@ -111,7 +111,7 @@
            <td>
               <div class="imageItem">
    <span class="image">
-        <a href="ShirtsImages/@image.Path" target="_blank">
+        <a href="ShirtsImages/@image.Path">
         <img class="imgSingle" src="ShirtsImages/@image.Path" height="100" width="100" /></a>
         <br />
         <span class="description">@image.Description</span>
@@ -137,7 +137,7 @@
            <td>
               <div class="imageItem">
    <span class="image">
-        <a href="ShirtsImages/@image.Path" target="_blank">
+        <a href="ShirtsImages/@image.Path">
         <img class="imgSingle" src="ShirtsImages/@image.Path" height="100" width="100" /></a>
         <br />
         <span class="description">@image.Description</span>
