--- a/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
@@ -43,6 +43,7 @@
          $("#tabs").tabs().css({
              'height': '660px',
              'overflow': 'auto',
+             'background': 'lightblue',
              'font-size': '10pt'
          });
 
