changed tabs background color.

--- a/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
@@ -43,7 +43,7 @@
          $("#tabs").tabs().css({
              'height': '660px',
              'overflow': 'auto',
-             'background': 'lightblue',
+             /*'background': 'lightblue',*/
              'font-size': '10pt'
          });
 
