--- a/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
@@ -14,8 +14,27 @@
  
 
  <script type="text/javascript">
+
+     function LoadImg(tab, path, desc) {
+         if (tab == "tabs-1") {
+             $('#' + tab).html('<a href="http://www.donnas-fashion.com/Apparel">Go back </a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+         }
+         else {
+             $('#' + tab).html('<a href="http://www.donnas-fashion.com/Apparel">Go back </a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+         }
+     }
+
      $(function () {
-         /*  Define friendly index name
+
+         $("#tab1").on("click", function () {
+             location.reload();
+             $('#tabs').tabs('select', '#tab1');
+         });
+         $("#tab2").on("click", function () {
+             location.reload();
+             $('#tabs').tabs('select', '#tab2');
+         });
+         //  Define friendly index name
          var index = 'key';
          //  Define friendly data store name
          var dataStore = window.sessionStorage;
@@ -39,7 +58,8 @@
                  //  Set future value
                  dataStore.setItem(index, newIndex)
              }
-         });*/
+         });
+
          $("#tabs").tabs().css({
              'height': '660px',
              'overflow': 'auto',
@@ -47,42 +67,42 @@
              'font-size': '10pt'
          });
 
-        /* $("#tab1").on("click", function () {
-             location.reload();
-             $.ajax({
-             type: "POST",
-             cache: false,
-             url: "@Url.Action("GetFolder", "Mens Apparels")",
-             contentType: "application/json; charset=utf-8",
-             data: "{'Folder': 'Mens Apparels'}",
-             dataType: "json",
-             success: function (result) {
-             alert("ok: " + result.d);
-             },
-             error: function (result) {
-             alert('Oh no: ' + result.responseText);
-             }
-             });
+         /* $("#tab1").on("click", function () {
+         location.reload();
+         $.ajax({
+         type: "POST",
+         cache: false,
+         url: "@Url.Action("GetFolder", "Mens Apparels")",
+         contentType: "application/json; charset=utf-8",
+         data: "{'Folder': 'Mens Apparels'}",
+         dataType: "json",
+         success: function (result) {
+         alert("ok: " + result.d);
+         },
+         error: function (result) {
+         alert('Oh no: ' + result.responseText);
+         }
+         });
 
          });
 
 
          $("#tab2").on("click", function () {
-             location.reload();
-             $.ajax({
-             type: "POST",
-             cache: false,
-             url: "@Url.Action("GetFolder", "Womens Apparels")",
-             contentType: "application/json; charset=utf-8",
-             data: "{'folder': 'Womens Apparels'}",
-             dataType: "json",
-             success: function (result) {
-             alert("ok: " + result.d);
-             },
-             error: function (result) {
-             alert('Oh no: ' + result.responseText);
-             }
-             });
+         location.reload();
+         $.ajax({
+         type: "POST",
+         cache: false,
+         url: "@Url.Action("GetFolder", "Womens Apparels")",
+         contentType: "application/json; charset=utf-8",
+         data: "{'folder': 'Womens Apparels'}",
+         dataType: "json",
+         success: function (result) {
+         alert("ok: " + result.d);
+         },
+         error: function (result) {
+         alert('Oh no: ' + result.responseText);
+         }
+         });
 
          });*/
 
@@ -112,14 +132,14 @@
            <td>
    <div class="imageItem">
    <span class="image">
-        <a href="ApparelsImages/@image.Path">
-        <img class="imgSingle" src="ApparelsImages/@image.Path" height="100" width="100" /></a>
+        <!--<a href="ApparelsImages/@image.Path">-->
+        <img class="imgSingle" style="cursor:pointer;" src="ApparelsImages/@image.Path" onclick="LoadImg('tabs-1', 'ApparelsImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
         <br />
         <span class="description">@image.Description</span>
    </span>
    </div>
    </td>
-           count++;
+      count++;
        }
    }
    </table>
@@ -138,8 +158,8 @@
            <td>
               <div class="imageItem">
    <span class="image">
-        <a href="ApparelsImages/@image.Path">
-        <img class="imgSingle" src="ApparelsImages/@image.Path" height="100" width="100" /></a>
+        <!--<a href="ApparelsImages/@image.Path">-->
+        <img class="imgSingle" style="cursor:pointer;" src="ApparelsImages/@image.Path" onclick="LoadImg('tabs-2', 'ApparelsImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
         <br />
         <span class="description">@image.Description</span>
    </span>
