--- a/MyBusiness/MyBusiness/Views/Pants/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Pants/Index.cshtml
@@ -14,8 +14,28 @@
  
 
  <script type="text/javascript">
+
+     function LoadImg(tab, path, desc) {
+         if (tab == "tabs-1") {
+             $('#' + tab).html('<a href="http://www.donnas-fashion.com/Pants">Go back </a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+         }
+         else {
+             $('#' + tab).html('<a href="http://www.donnas-fashion.com/Pants">Go back </a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+         }
+     }
+
      $(function () {
-         /*  Define friendly index name
+
+         $("#tab1").on("click", function () {
+             location.reload();
+             $('#tabs').tabs('select', '#tab1');
+         });
+         $("#tab2").on("click", function () {
+             location.reload();
+             $('#tabs').tabs('select', '#tab2');
+         });
+
+         //  Define friendly index name
          var index = 'key';
          //  Define friendly data store name
          var dataStore = window.sessionStorage;
@@ -39,7 +59,7 @@
                  //  Set future value
                  dataStore.setItem(index, newIndex)
              }
-         });*/
+         });
          $("#tabs").tabs().css({
              'height': '660px',
              'overflow': 'auto',
@@ -111,8 +131,8 @@
            <td>
    <div class="imageItem">
    <span class="image">
-        <a href="PantsImages/@image.Path">
-        <img class="imgSingle" src="PantsImages/@image.Path" height="100" width="100" /></a>
+        <!--<a href="PantsImages/@image.Path">-->
+        <img class="imgSingle" style="cursor:pointer;" src="PantsImages/@image.Path" onclick="LoadImg('tabs-1', 'PantsImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
         <br />
         <span class="description">@image.Description</span>
    </span>
@@ -137,8 +157,8 @@
            <td>
               <div class="imageItem">
    <span class="image">
-        <a href="PantsImages/@image.Path">
-        <img class="imgSingle" src="PantsImages/@image.Path" height="100" width="100" /></a>
+         <!--<a href="PantsImages/@image.Path">-->
+        <img class="imgSingle" style="cursor:pointer;" src="PantsImages/@image.Path" onclick="LoadImg('tabs-2', 'PantsImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
         <br />
         <span class="description">@image.Description</span>
    </span>
