--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -62,6 +62,7 @@
     <link href="@Url.Content("~/favicon.ico")" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Content("~/Scripts/tabsCustom.js")" type="text/javascript"></script>
 </head>
     <!--<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
