--- a/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
@@ -15,17 +15,43 @@
 
  <script type="text/javascript">
 
-     function LoadImg(tab, path, desc) {
+ 
+  function UpdateWomen()
+ {         
+            $.ajax({
+                url: '@Url.Action("ReloadApparelsWomen", "Apparel")',
+                data: { },
+                type: 'POST',
+                success: function (data) {
+                $('#tabs-1').html(data);
+                }
+            });
+ }
+
+
+ function UpdateMen()
+ {         
+            $.ajax({
+                url: '@Url.Action("ReloadApparelsMen", "Apparel")',
+                data: { },
+                type: 'POST',
+                success: function (data) {
+                $('#tabs-2').html(data);
+                }
+            });
+ }
+
+     function UpdateView(tab, path, desc) {
          if (tab == "tabs-1") {
-             $('#' + tab).html('<a href="http://www.donnas-fashion.com/Apparel">Go back </a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+                      $('#' + tab).html('<button onclick="UpdateWomen(); ">Go back</button> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
          }
          else {
-             $('#' + tab).html('<a href="http://www.donnas-fashion.com/Apparel">Go back </a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+                      $('#' + tab).html('<button onclick="UpdateMen(); ">Go back</button> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
          }
      }
 
      $(function () {
-
+     /*
          $("#tab1").on("click", function () {
              location.reload();
              $('#tabs').tabs('select', '#tab1');
@@ -47,9 +73,9 @@
              // getter: Always default to first tab in error state
              var oldIndex = 0;
          }
-
+         */
          $("#tabs").tabs({
-             // The zero-based index of the panel that is active (open)
+             /* The zero-based index of the panel that is active (open)
              active: oldIndex,
              // Triggered after a tab has been activated
              activate: function (event, ui) {
@@ -57,7 +83,7 @@
                  var newIndex = ui.newTab.parent().children().index(ui.newTab);
                  //  Set future value
                  dataStore.setItem(index, newIndex)
-             }
+             }*/
          });
 
          $("#tabs").tabs().css({
@@ -67,49 +93,11 @@
              'font-size': '10pt'
          });
 
-         /* $("#tab1").on("click", function () {
-         location.reload();
-         $.ajax({
-         type: "POST",
-         cache: false,
-         url: "@Url.Action("GetFolder", "Mens Apparels")",
-         contentType: "application/json; charset=utf-8",
-         data: "{'Folder': 'Mens Apparels'}",
-         dataType: "json",
-         success: function (result) {
-         alert("ok: " + result.d);
-         },
-         error: function (result) {
-         alert('Oh no: ' + result.responseText);
-         }
-         });
-
-         });
-
-
-         $("#tab2").on("click", function () {
-         location.reload();
-         $.ajax({
-         type: "POST",
-         cache: false,
-         url: "@Url.Action("GetFolder", "Womens Apparels")",
-         contentType: "application/json; charset=utf-8",
-         data: "{'folder': 'Womens Apparels'}",
-         dataType: "json",
-         success: function (result) {
-         alert("ok: " + result.d);
-         },
-         error: function (result) {
-         alert('Oh no: ' + result.responseText);
-         }
-         });
-
-         });*/
 
      });
 
 
-    </script>
+ </script>
 </head>
 <body>
 <br />
@@ -119,56 +107,11 @@
 <li id="tab2"><a href="#tabs-2">Men's</a></li>
 </ul>
 <div id="tabs-1">
-<table>
-  @{int count = 0;}
-   @foreach (var image in ViewData.Model)
-   {
-       if (image.Folder == "Women")
-       {
-           if (count % 8 == 0)
-           {
-             <tr></tr>    
-           }
-           <td>
-   <div class="imageItem">
-   <span class="image">
-        <!--<a href="ApparelsImages/@image.Path">-->
-        <img class="imgSingle" style="cursor:pointer;" src="ApparelsImages/@image.Path" onclick="LoadImg('tabs-1', 'ApparelsImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
-        <br />
-        <span class="description">@image.Description</span>
-   </span>
-   </div>
-   </td>
-      count++;
-       }
-   }
-   </table>
+ @Html.Partial("_ApparelsWomen")
 </div>
 <div id="tabs-2">
-<table>
- @{int count2 = 0;}
-   @foreach (var image in ViewData.Model)
-   {
-       if (image.Folder == "Men")
-       {
-           if (count2 % 8 == 0)
-           {
-             <tr></tr>    
-           }
-           <td>
-              <div class="imageItem">
-   <span class="image">
-        <!--<a href="ApparelsImages/@image.Path">-->
-        <img class="imgSingle" style="cursor:pointer;" src="ApparelsImages/@image.Path" onclick="LoadImg('tabs-2', 'ApparelsImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
-        <br />
-        <span class="description">@image.Description</span>
-   </span>
-   </div>
-   </td>
-           count2++;
-       }
-   }
-</table>
+ @Html.Partial("_ApparelsMen")
+
 </div>
 </div>
 
