--- a/MyBusiness/MyBusiness/Views/Shoes/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shoes/Index.cshtml
@@ -15,95 +15,47 @@
 
  <script type="text/javascript">
 
-     function LoadImg(tab, path, desc) {
+     function UpdateWomen() {
+         $.ajax({
+             url: '@Url.Action("ReloadShoesWomen", "Shoes")',
+             data: {},
+             type: 'POST',
+             success: function (data) {
+                 $('#tabs-1').html(data);
+             }
+         });
+     }
+
+
+     function UpdateMen() {
+         $.ajax({
+             url: '@Url.Action("ReloadShoesMen", "Shoes")',
+             data: {},
+             type: 'POST',
+             success: function (data) {
+                 $('#tabs-2').html(data);
+             }
+         });
+     }
+
+     function UpdateView(tab, path, desc) {
          if (tab == "tabs-1") {
-             $('#' + tab).html('<a href="http://www.donnas-fashion.com/Shoes">Go back </a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+             $('#' + tab).html('<button onclick="UpdateWomen(); ">Go back</button> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
          }
          else {
-             $('#' + tab).html('<a href="http://www.donnas-fashion.com/Shoes">Go back </a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+             $('#' + tab).html('<button onclick="UpdateMen(); ">Go back</button> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
          }
      }
 
      $(function () {
-
-         $("#tab1").on("click", function () {
-             location.reload();
-             $('#tabs').tabs('select', '#tab1');
-         });
-         /*$("#tab2").on("click", function () {
-             location.reload();
-             $('#tabs').tabs('select', '#tab2');
-         });*/
-
-         //  Define friendly index name
-         var index = 'key';
-         //  Define friendly data store name
-         var dataStore = window.sessionStorage;
-
-         //  Start magic!
-         try {
-             // getter: Fetch previous value
-             var oldIndex = dataStore.getItem(index);
-         } catch (e) {
-             // getter: Always default to first tab in error state
-             var oldIndex = 0;
-         }
-
          $("#tabs").tabs({
-             // The zero-based index of the panel that is active (open)
-             active: oldIndex,
-             // Triggered after a tab has been activated
-             activate: function (event, ui) {
-                 //  Get future value
-                 var newIndex = ui.newTab.parent().children().index(ui.newTab);
-                 //  Set future value
-                 dataStore.setItem(index, newIndex)
-             }
+
          });
          $("#tabs").tabs().css({
              'height': '660px',
              'overflow': 'auto',
              'font-size': '10pt'
          });
-
-         /* $("#tab1").on("click", function () {
-         location.reload();
-         $.ajax({
-         type: "POST",
-         cache: false,
-         url: "@Url.Action("GetFolder", "Mens Apparels")",
-         contentType: "application/json; charset=utf-8",
-         data: "{'Folder': 'Mens Apparels'}",
-         dataType: "json",
-         success: function (result) {
-         alert("ok: " + result.d);
-         },
-         error: function (result) {
-         alert('Oh no: ' + result.responseText);
-         }
-         });
-
-         });
-
-
-         $("#tab2").on("click", function () {
-         location.reload();
-         $.ajax({
-         type: "POST",
-         cache: false,
-         url: "@Url.Action("GetFolder", "Womens Apparels")",
-         contentType: "application/json; charset=utf-8",
-         data: "{'folder': 'Womens Apparels'}",
-         dataType: "json",
-         success: function (result) {
-         alert("ok: " + result.d);
-         },
-         error: function (result) {
-         alert('Oh no: ' + result.responseText);
-         }
-         });
-
-         });*/
 
      });
 
@@ -117,30 +69,7 @@
 <li id="tab1"><a href="#tabs-1">Women's</a></li>
 </ul>
 <div id="tabs-1">
-<table>
-  @{int count = 0;}
-   @foreach (var image in ViewData.Model)
-   {
-       if (image.Folder == "Women")
-       {
-          if (count % 8 == 0)
-           {
-             <tr></tr>    
-           }
-           <td>
-   <div class="imageItem">
-   <span class="image">
-        <!--<a href="ShoesImages/@image.Path">-->
-        <img class="imgSingle" style="cursor:pointer;" src="ShoesImages/@image.Path" onclick="LoadImg('tabs-1', 'ShoesImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
-        <br />
-        <span class="description">@image.Description</span>
-   </span>
-   </div>
-   </td>
-           count++;
-       }
-   }
-   </table>
+ @Html.Partial("_ShoesWomen")
 </div>
 </div>
 
