--- a/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
@@ -43,10 +43,10 @@
 
      function UpdateView(tab, path, desc) {
          if (tab == "tabs-1") {
-                      $('#' + tab).html('<button onclick="UpdateWomen(); ">Go back</button> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+                      $('#' + tab).html('<a href="#" onclick="UpdateWomen(); ">Go back</a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
          }
          else {
-                      $('#' + tab).html('<button onclick="UpdateMen(); ">Go back</button> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+             $('#' + tab).html('<a href="#" onclick="UpdateMen(); ">Go back</a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
          }
      }
 
