changed store hours.

--- a/MyBusiness/MyBusiness/Views/Map/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Map/Index.cshtml
@@ -63,9 +63,9 @@
               <div class="StoreHours">
               <span class="StoreHoursU">Store Hours:</span>
               <br />
-              Mon - Sat: 11:00am - 7:00pm
+              Mon - Sat: (11:00am - 7:00pm)
               <br />
-              Sun: Closed
+              Sun - (12:30am - 5:00pm)
               </div>
 
         <!--<img id="ProfilePic" src="@Url.Content("/Images/steveyi.jpg")" alt="Steve Yi" /> -->
