--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -75,33 +75,48 @@
     <script src="@Url.Content("~/Scripts/Util.js")" type="text/javascript"></script>-->
       
 
-       <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+
+<link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/droplinetabs.css")" />
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+
+<script src="@Url.Content("~/Scripts/droplinemenu.js")" type="text/javascript"></script>
+
+
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
 <script src="http://code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
 
 
-    <script type="text/javascript">
 
-    </script>
+<script type="text/javascript">
 
+//build menu with DIV ID="myslidemenu" on page:
+droplinemenu.buildmenu("droplinetabs1")
+</script>
+            <!--<div class="CompanyName">Donna's Fashion</div>-->
     <header>
             <div class="content-wrapper">
-                  @*<p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>*@
-                    <div class="CompanyName">Donna's Fashion</div>
-                    <nav>
-                        <ul id="menu">
-                            <li class="@Html.ActivePage("About", "Index")">@Html.ActionLink("About Us", "Index", "About")</li>
-                            <li class="@Html.ActivePage("Map", "Index")">@Html.ActionLink("Map", "Index", "Map")</li>
-                            <li class="@Html.ActivePage("RhineStones", "Index")">@Html.ActionLink("Rhinestones", "Index", "RhineStones")</li>
-                            <li class="@Html.ActivePage("Shoes", "Index")">@Html.ActionLink("Shoes", "Index", "Shoes")</li>
-                            <li class="@Html.ActivePage("Pants", "Index")">@Html.ActionLink("Pants", "Index", "Pants")</li>
-                            <li class="@Html.ActivePage("Shirts", "Index")">@Html.ActionLink("Shirts", "Index", "Shirts")</li>
+                  <!--<span class="site-title">@Html.ActionLink("Donna's Fashion", "Index", "Home")</span>-->
+                    <!--<nav>-->
+                    <div id="droplinetabs1" class="droplinetabs">
+                        <ul>
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("New Arrivals!", "Index", "NewArrivals")</li>
+                            <li><a href="#">Apparels</a>
+                            <ul>
                             <li class="@Html.ActivePage("Hats", "Index")">@Html.ActionLink("Hats", "Index", "Hats")</li>
-                            <li class="@Html.ActivePage("Apparel", "Index")">@Html.ActionLink("Apparel", "Index", "Apparel")</li>
-                            <li class="@Html.ActivePage("NewArrivals", "Index")">@Html.ActionLink("New Arrivals!", "Index", "NewArrivals")</li>
-                            <li class="@Html.ActivePage("Home", "Index")">@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Shirts", "Index", "Shirts")</li>
+                            <li>@Html.ActionLink("Pants", "Index", "Pants")</li>
+                            </ul>
+                            </li>
+                            <li>@Html.ActionLink("Rhinestones", "Index", "RhineStones")</li>
+                            <li>@Html.ActionLink("Shoes", "Index", "Shoes")</li>
+                            <li>@Html.ActionLink("Map", "Index", "Map")</li>
+                            <li>@Html.ActionLink("About Us", "Index", "About")</li>
                         </ul>
-                    </nav>
+                        </div>
+                    <!--</nav>-->
             </div>
         </header>
     <div id="bodyInner">
