--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -94,7 +94,6 @@
 //build menu with DIV ID="myslidemenu" on page:
 droplinemenu.buildmenu("droplinetabs1")
 </script>
-            <!--<div class="CompanyName">Donna's Fashion</div>-->
     <header>
             <div class="content-wrapper">
                   <!--<span class="site-title">@Html.ActionLink("Donna's Fashion", "Index", "Home")</span>-->
@@ -115,6 +114,7 @@ droplinemenu.buildmenu("droplinetabs1")
                             <li>@Html.ActionLink("Map", "Index", "Map")</li>
                             <li>@Html.ActionLink("About Us", "Index", "About")</li>
                         </ul>
+                                    <div class="CompanyName">Donna's Fashion</div>
                         </div>
                     <!--</nav>-->
             </div>
