--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -64,58 +64,36 @@
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/tabsCustom.js")" type="text/javascript"></script>
 </head>
-    <!--<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
-    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-1.9.0.min.js" type="text/javascript"></script>
-	<script src="http://code.jquery.com/qunit/qunit-1.10.0.js" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.cookie.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/Util.js")" type="text/javascript"></script>-->
-      
-
-
-<link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/droplinetabs.css")" />
-
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-
-<script src="@Url.Content("~/Scripts/droplinemenu.js")" type="text/javascript"></script>
-
 
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
 <script src="http://code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
 
-
+<link rel="stylesheet" href="@Url.Content("~/Content/style.css")" type="text/css" media="screen, projection"/>
+<script type="text/javascript" src="@Url.Content("~/Scripts/js/jquery-1.3.1.min.js")"></script>	
+	<script type="text/javascript" language="javascript" src="@Url.Content("~/Scripts/jquery.dropdownplain.js")"></script>
 
 <script type="text/javascript">
-
-//build menu with DIV ID="myslidemenu" on page:
-droplinemenu.buildmenu("droplinetabs1")
 </script>
     <header>
             <div class="content-wrapper">
                   <!--<span class="site-title">@Html.ActionLink("Donna's Fashion", "Index", "Home")</span>-->
                     <!--<nav>-->
-                    <div id="droplinetabs1" class="droplinetabs">
-                        <ul>
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("New Arrivals!", "Index", "NewArrivals")</li>
+                        <ul class="dropdown">
+                        <li class="@Html.ActivePage("About", "Index")">@Html.ActionLink("About Us", "Index", "About")</li>
+                        <li class="@Html.ActivePage("Map", "Index")">@Html.ActionLink("Map", "Index", "Map")</li>
+                        <li class="@Html.ActivePage("Shoes", "Index")">@Html.ActionLink("Shoes", "Index", "Shoes")</li>
+                        <li class="@Html.ActivePage("Rhinestones", "Index")">@Html.ActionLink("Rhinestones", "Index", "RhineStones")</li>
                             <li><a href="#">Apparels</a>
-                            <ul>
-                            <li class="@Html.ActivePage("Hats", "Index")">@Html.ActionLink("Hats", "Index", "Hats")</li>
-                            <li>@Html.ActionLink("Shirts", "Index", "Shirts")</li>
-                            <li>@Html.ActionLink("Pants", "Index", "Pants")</li>
+                            <ul class="sub_menu">
+                            <li class="@Html.ActivePage("Shirts", "Index")">@Html.ActionLink("Shirts", "Index", "Shirts")</li>
+                            <li class="@Html.ActivePage("Pants", "Index")">@Html.ActionLink("Pants", "Index", "Pants")</li>
+                             <li class="@Html.ActivePage("Hats", "Index")">@Html.ActionLink("Hats", "Index", "Hats")</li>
                             </ul>
                             </li>
-                            <li>@Html.ActionLink("Rhinestones", "Index", "RhineStones")</li>
-                            <li>@Html.ActionLink("Shoes", "Index", "Shoes")</li>
-                            <li>@Html.ActionLink("Map", "Index", "Map")</li>
-                            <li>@Html.ActionLink("About Us", "Index", "About")</li>
+                            <li class="@Html.ActivePage("NewArrivals", "Index")">@Html.ActionLink("New Arrivals!", "Index", "NewArrivals")</li>
+                            <li class="@Html.ActivePage("Home", "Index")">@Html.ActionLink("Home", "Index", "Home")</li>
                         </ul>
-                                    <div class="CompanyName">Donna's Fashion</div>
-                        </div>
                     <!--</nav>-->
             </div>
         </header>
