changes in categories.

--- a/MyBusiness/MyBusiness/Views/Hats/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Hats/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using MyBusiness.Models
 
 @{
-    ViewBag.Title = "Hats";
+    ViewBag.Title = "Caps";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,7 +10,7 @@
 <html>
 <head>
 <br />
-<div class ="bar"><span class="barText"><h2>Hats</h2></span></div>
+<div class ="bar"><span class="barText"><h2>Caps</h2></span></div>
  
 
  <script type="text/javascript">
