--- a/MyBusiness/MyBusiness/Views/Shared/_CapsWomen.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_CapsWomen.cshtml
@@ -11,8 +11,8 @@
            <td>
    <div class="imageItem">
    <span class="image">
-        <!--<a href="HatsImages/@image.Path">-->
-        <img class="imgSingle" style="cursor:pointer;" src="HatsImages/@image.Path" onclick="UpdateView('tabs-1', 'HatsImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
+        <!--<a href="CapsImages/@image.Path">-->
+        <img class="imgSingle" style="cursor:pointer;" src="CapsImages/@image.Path" onclick="UpdateView('tabs-1', 'CapsImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
         <br />
         <span class="description">@image.Description</span>
    </span>
