--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
                         <li class="@Html.ActivePage("About", "Index")">@Html.ActionLink("About Us", "Index", "About")</li>
                         <li class="@Html.ActivePage("Map", "Index")">@Html.ActionLink("Map", "Index", "Map")</li>
                         <li class="@Html.ActivePage("Shoes", "Index")">@Html.ActionLink("Shoes", "Index", "Shoes")</li>
-                        <li class="@Html.ActivePage("Hats", "Index")">@Html.ActionLink("Caps", "Index", "Hats")</li>
+                        <li class="@Html.ActivePage("Caps", "Index")">@Html.ActionLink("Caps", "Index", "Caps")</li>
                             <li><a href="#">Apparel</a>
                             <ul class="sub_menu">
                             <li class="@Html.ActivePage("Shirts", "Index")">@Html.ActionLink("Shirts", "Index", "Shirts")</li>
