--- a/MyBusiness/MyBusiness/Views/Shared/_GlitterShirtsWomen.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_GlitterShirtsWomen.cshtml
@@ -11,8 +11,8 @@
            <td>
    <div class="imageItem">
    <span class="image">
-        <!--<a href="NewArrivalsImages/@image.Path">-->
-         <img class="imgSingle" style="cursor:pointer;" src="NewArrivalsImages/@image.Path" onclick="UpdateView('tabs-1', 'NewArrivalsImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
+        <!--<a href="CapsImages/@image.Path">-->
+        <img class="imgSingle" style="cursor:pointer;" src="GlitterImages/@image.Path" onclick="UpdateView('tabs-1', 'GlitterImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
         <br />
         <span class="description">@image.Description</span>
    </span>
