--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -81,6 +81,25 @@
                         <ul class="dropdown">
                         <li class="@Html.ActivePage("About", "Index")">@Html.ActionLink("About Us", "Index", "About")</li>
                         <li class="@Html.ActivePage("Map", "Index")">@Html.ActionLink("Map", "Index", "Map")</li>
+                        <li><a href="#">Kids</a>
+                            <ul class="sub_menu">
+                            <li class="@Html.ActivePage("KidsCaps", "Index")">@Html.ActionLink("Caps", "Index", "KidsCaps")</li>
+                            <li class="@Html.ActivePage("KidsShirts", "Index")">@Html.ActionLink("Shirts", "Index", "KidsShirts")</li>
+                            <li class="@Html.ActivePage("KidsPants", "Index")">@Html.ActionLink("Pants", "Index", "KidsPants")</li>
+                        </ul>
+                        </li>
+                        <li><a href="#">Glitter</a>
+                            <ul class="sub_menu">
+                            <li class="@Html.ActivePage("GlitterShirts", "Index")">@Html.ActionLink("Shirts", "Index", "GlitterShirts")</li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Embroidery</a>
+                            <ul class="sub_menu">
+                            <li class="@Html.ActivePage("EmCaps", "Index")">@Html.ActionLink("Caps", "Index", "EmCaps")</li>
+                            <li class="@Html.ActivePage("EmShirts", "Index")">@Html.ActionLink("Shirts", "Index", "EmShirts")</li>
+                            <li class="@Html.ActivePage("EmPurses", "Index")">@Html.ActionLink("Purses", "Index", "EmPurses")</li>
+                            </ul>
+                        </li>
                         <li class="@Html.ActivePage("Shoes", "Index")">@Html.ActionLink("Shoes", "Index", "Shoes")</li>
                         <li class="@Html.ActivePage("Caps", "Index")">@Html.ActionLink("Caps", "Index", "Caps")</li>
                             <li><a href="#">Apparel</a>
@@ -90,7 +109,6 @@
                             <li class="@Html.ActivePage("RhineStones", "Index")">@Html.ActionLink("Rhinestones", "Index", "RhineStones")</li>
                             </ul>
                             </li>
-                            <li class="@Html.ActivePage("NewArrivals", "Index")">@Html.ActionLink("New Arrivals!", "Index", "NewArrivals")</li>
                             <li class="@Html.ActivePage("Home", "Index")">@Html.ActionLink("Home", "Index", "Home")</li>
                         </ul>
                     <!--</nav>-->
