fixed wording women and men. Also fixed loading images in the correct views.

--- a/MyBusiness/MyBusiness/Views/Caps/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Caps/Index.cshtml
@@ -74,8 +74,8 @@
 <br />
    <div id="tabs">
 <ul>
-<li id="tab1"><a href="#tabs-1">Women's</a></li>
-<li id="tab2"><a href="#tabs-2">Men's</a></li>
+<li id="tab1"><a href="#tabs-1">Women</a></li>
+<li id="tab2"><a href="#tabs-2">Men</a></li>
 </ul>
 <div id="tabs-1">
  @Html.Partial("_CapsWomen")
