--- a/MyBusiness/MyBusiness/Views/Shoes/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shoes/Index.cshtml
@@ -74,7 +74,7 @@
 <br />
    <div id="tabs">
 <ul>
-<li id="tab1"><a href="#tabs-1">Women's</a></li>
+<li id="tab1"><a href="#tabs-1">Women</a></li>
 </ul>
 <div id="tabs-1">
  @Html.Partial("_ShoesWomen")
