changes to meta tags.

--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -47,15 +47,40 @@
     <meta name="description" content="women jacket">
     <meta name="description" content="men clothing">
     <meta name="description" content="women clothing">
-    <meta name="description" content="men's">
-    <meta name="description" content="women's">
+    <meta name="description" content="mens">
+    <meta name="description" content="womens">
     <meta name="description" content="caps">
+    <meta name="description" content="Caps">
     <meta name="description" content="rhinestones">
     <meta name="description" content="rhinestone">
     <meta name="description" content="t-shirts">
     <meta name="description" content="t-shirt">
     <meta name="description" content="tshirt">
     <meta name="description" content="tshirts">
+    <meta name="description" content="shirts">
+    <meta name="description" content="Shirts">
+    <meta name="description" content="tops">
+    <meta name="description" content="Tops">
+    <meta name="description" content="kids clothing">
+    <meta name="description" content="Kids Clothing">
+    <meta name="description" content="Kids clothing">
+    <meta name="description" content="Kids Clothes">
+    <meta name="description" content="kids Clothes">
+    <meta name="description" content="Glitter">
+    <meta name="description" content="glitter">
+    <meta name="description" content="bottoms">
+    <meta name="description" content="Bottoms">
+    <meta name="description" content="Houston">
+    <meta name="description" content="houston">
+    <meta name="description" content="Texas">
+    <meta name="description" content="texas">
+    <meta name="description" content="houston clothes">
+    <meta name="description" content="Houston Clothes">
+    <meta name="description" content="houston Clothes">
+    <meta name="description" content="houston clothing">
+    <meta name="description" content="Houston Clothing">
+    <meta name="description" content="Houston clothing">
+    <meta name="description" content="houston Clothing">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="Steve Yi">
     <!--<link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />-->
