--- a/MyBusiness/MyBusiness/Views/Home/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Home/Index.cshtml
@@ -55,25 +55,12 @@
         </div>
         <br />
         <br />
-       <!-- <div id="slideshow">
-            <div>
-                <img src="http://farm6.static.flickr.com/5224/5658667829_2bb7d42a9c_m.jpg">
-            </div>
-            <div>
-                <img src="http://farm6.static.flickr.com/5230/5638093881_a791e4f819_m.jpg">
-            </div>
-            <div>
-                Pretty cool eh? This slide is proof the content can be anything.
-            </div>
-        </div>-->
-        <div style="text-align: center">
-            <!--<img id="IntroPic" src="@Url.Content("/Images/welcome.png")" alt="Welcome Mat" /> -->
-        </div>
-        <p>
+         <!--@Html.Partial("_HomeImageScroll")-->
+        <div class="WelcomeMsg">
             Coming Soon!
             <br />
             <br />
-        </p>
+        </div>
     </div>
 </body>
 </html>
