--- a/MyBusiness/MyBusiness/Views/Shared/_KidsCapsBoys.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_KidsCapsBoys.cshtml
@@ -2,7 +2,7 @@
  @{int count2 = 0;}
    @foreach (var image in ViewData.Model)
    {
-       if (image.Folder == "Boys")
+       if (image.Gender == "Boys")
        {
            if (count2 % 8 == 0)
            {
