--- a/MyBusiness/MyBusiness/Views/Shared/_PantsWomen.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_PantsWomen.cshtml
@@ -2,7 +2,7 @@
 @{int count = 0;}
    @foreach (var image in ViewData.Model)
    {
-       if (image.Folder == "Women")
+       if (image.Gender == "Women")
        {
            if (count % 8 == 0)
            {
