home page images alt description names.

--- a/MyBusiness/MyBusiness/Views/Shared/_HomeImageScroll.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_HomeImageScroll.cshtml
@@ -2,7 +2,7 @@
     @foreach (var image in ViewData.Model)
     {
         <div>
-            <img src="HomeScrollImages/@image.Path" height="100%" width="100%" alt="Random Images" />
+            <img src="HomeScrollImages/@image.Path" height="100%" width="100%" alt="@image.Description" />
         </div>
     }
 </div>
